--- a/src/app/clock/clock.page.scss
+++ b/src/app/clock/clock.page.scss
@@ -1,11 +1,11 @@
 :host {
     ion-toolbar {
         ion-label {
-            opacity: 80%;
+            opacity: 0.8;
         }
 
         .main-support {
-            opacity: 50%;
+            opacity: 0.5;
         }
     }
     
@@ -88,7 +88,7 @@
         ion-label {
             font-size: var(--ion-text-11);
             color: var(--ion-color-text);
-            opacity: 80%;
+            opacity: 0.8;
         }
 
         .bell-noti {
@@ -107,7 +107,7 @@
             color: var(--ion-color-text);
             font-size: var(--ion-text-15);
             font-weight: bold;
-            opacity: 100%;
+            opacity: 1;
             padding: 0;
         }
 
@@ -171,7 +171,7 @@
                 font-style: italic;
                 margin: 0.75em;
                 color: var(--ion-color-text);
-                opacity: 80%;
+                opacity: 0.8;
             }
         }
     }
@@ -185,7 +185,7 @@
             ion-img {
                 width: var(--ion-text-20);
                 height: var(--ion-text-20);
-                opacity: 80%;
+                opacity: 0.8;
                 margin-right: 0.5em;
             }
 
@@ -306,7 +306,7 @@
                     --color: var(--ion-color-text-tasklist);
                     align-items: center;
                     font-size: var(--ion-text-11);
-                    opacity: 80%;
+                    opacity: 0.8;
                     width: -webkit-fill-available;
 
                     ion-checkbox {
@@ -336,7 +336,7 @@
             ion-button {
                 width: -webkit-fill-available;
                 --color: var(--ion-color-text-header);
-                opacity: 80%;
+                opacity: 0.8;
                 --border-color: var(--ion-color-text-header);
                 margin-bottom: 1em;
                 --border-width: 1px;
@@ -356,13 +356,13 @@
                 }
 
                 ion-input {
-                    opacity: 80%;
+                    opacity: 0.8;
                     color: var(--ion-color-text-tasklist);
                     margin: 0 0.5em;
                 }
 
                 ion-textarea {
-                    opacity: 80%;
+                    opacity: 0.8;
                     color: var(--ion-color-text-tasklist);
                 }
             }
