--- a/src/app/settings/settings.page.scss
+++ b/src/app/settings/settings.page.scss
@@ -47,7 +47,7 @@ ion-list {
     }
 
     ion-img {
-        opacity: 60%;
+        opacity: 0.6;
     }
 
     ion-icon {
@@ -113,7 +113,7 @@ ion-list {
 
 .small-note {
     font-size: var(--ion-text-10);
-    opacity: 80%;
+    opacity: 0.8;
 }
 
 .active-now {
