--- a/src/global.scss
+++ b/src/global.scss
@@ -77,7 +77,7 @@
 
 .footer-label {
     font-size: var(--ion-text-11);
-    opacity: 80%;
+    opacity: 0.8;
     --color: var(--ion-color-text-header);
     color: var(--ion-color-text-header);
 
@@ -122,7 +122,7 @@
         ion-label {
             font-size: var(--ion-text-13); //13px;
             white-space: pre-line;
-            opacity: 100%;
+            opacity: 1;
             color: #FFFFFF;
             min-width: 62px;
             font-weight: 600;
@@ -243,7 +243,7 @@
     align-items: center;
     justify-content: center;
     font-style: italic;
-    opacity: 80%;
+    opacity: 0.8;
     width: -webkit-fill-available;
     margin: 5em;
 }
@@ -285,7 +285,7 @@
         .sc-ion-alert-md .alert-radio-label.sc-ion-alert-md {
             font-size: var(--ion-text-13);
             color: var(--ion-color-text);
-            opacity: 80%;
+            opacity: 0.8;
             white-space: pre-line;
         }
 
@@ -406,7 +406,7 @@
             --border-radius: 0;
             --box-shadow: none;
             --color: var(--ion-color-text-header);
-            opacity: 80%;
+            opacity: 0.8;
         }
 
         ion-fab-list {
@@ -514,5 +514,4 @@
             background: #f2f2f2;
         }
     }
-
 }
